# uniwash

./: .env.sample  .gitignore  .hintrc  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  rav.yaml  requirements.txt
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.in  local.in  production.in
templates/: 403.html  404.html  500.html  base.html
templates/components/: about.html  footer.html  navbar.html  plans.html
templates/components/blogs/: list.html
templates/components/home/: banner.html
templates/head/: _base.html  index.html
templates/pages/: contact.html  home.html
uniwash/: conftest.py
uniwash/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
uniwash/core/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
uniwash/core/migrations/: 0001_initial.py  0002_contact.py  0003_service_pricing.py
uniwash/static/: css2
uniwash/static/css/: style.css
uniwash/static/js/: custom.js  project.js  swiper.min.js
uniwash/users/: adapters.py  apps.py  models.py  views.py
uniwash/users/api/: serializers.py  views.py
uniwash/users/migrations/: 0001_initial.py
uniwash/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
webpack/: common.config.js
