
# ==== Project Table =====
[project]
name = "uniwash"
authors = [{name = "kwasa", email = "kwasa@gmail.com"}]
version = "1.0.0"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "alabaster==0.7.16",
    "amqp==5.3.1",
    "anyio==4.8.0",
    "argon2-cffi-bindings==21.2.0",
    "argon2-cffi==23.1.0",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "babel==2.16.0",
    "billiard==4.2.1",
    "boto3==1.35.97",
    "botocore==1.35.97",
    "celery==5.4.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "coverage==7.6.0",
    "crispy-bootstrap5==2024.2",
    "cron-descriptor==1.4.5",
    "cryptography==44.0.0",
    "cssbeautifier==1.15.1",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "django==5.1.4",
    "django-allauth[mfa]==0.63.6",
    "django-anymail[amazon-ses]==11.0.1",
    "django-celery-beat==2.7.0",
    "django-cors-headers==4.4.0",
    "django-coverage-plugin==3.1.0",
    "django-crispy-forms==2.3",
    "django-debug-toolbar==4.4.6",
    "django-environ==0.11.2",
    "django-extensions==3.2.3",
    "django-model-utils==4.5.1",
    "django-redis==5.4.0",
    "django-storages[s3]==1.14.4",
    "django-stubs[compatible-mypy]==5.0.2",
    "django-stubs-ext==5.1.1",
    "django-timezone-field==7.1",
    "django-webpack-loader==3.1.0",
    "django-widget-tweaks==1.5.0",
    "djangorestframework==3.15.2",
    "djangorestframework-stubs[compatible-mypy]==3.15.0",
    "djlint==1.34.1",
    "docutils==0.21.2",
    "drf-spectacular==0.27.2",
    "editorconfig==0.17.0",
    "executing==2.1.0",
    "factory-boy==3.3.0",
    "faker==33.3.1",
    "filelock==3.16.1",
    "flower==2.0.1",
    "frozenlist==1.5.0",
    "gunicorn==22.0.0",
    "h11==0.14.0",
    "hiredis==3.0.0",
    "html-tag-names==0.1.2",
    "html-void-elements==0.1.0",
    "httptools==0.6.4",
    "humanize==4.11.0",
    "identify==2.6.5",
    "idna==3.10",
    "imagesize==1.4.1",
    "inflection==0.5.1",
    "iniconfig==2.0.0",
    "ipdb==0.13.13",
    "ipython==8.31.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jmespath==1.0.1",
    "jsbeautifier==1.15.1",
    "json5==0.9.28",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jwt==1.3.1",
    "kombu==5.4.2",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "multidict==6.1.0",
    "mypy==1.10.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pre-commit==3.7.1",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "psycopg[c]==3.2.1",
    "psycopg-c==3.2.1",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pytest==8.3.1",
    "pytest-django==4.8.0",
    "pytest-sugar==1.0.0",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "qrcode==8.0",
    "redis==5.0.7",
    "referencing==0.35.1",
    "regex==2023.12.25",
    "requests==2.32.3",
    "rpds-py==0.22.3",
    "ruff==0.5.4",
    "s3transfer==0.10.4",
    "sentry-sdk[django]==2.10.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sphinx==7.4.7",
    "sphinx-autobuild==2024.4.16",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.45.2",
    "termcolor==2.5.0",
    "text-unidecode==1.3",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-pyyaml==6.0.12.20241230",
    "types-requests==2.32.0.20241016",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "upstash-redis==1.2.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "uvicorn[standard]==0.30.3",
    "uvicorn-worker==0.2.0",
    "vine==5.1.0",
    "virtualenv==20.28.1",
    "watchdog==6.0.0",
    "watchfiles==0.21.0",
    "wcwidth==0.2.13",
    "websockets==14.1",
    "werkzeug[watchdog]==3.0.3",
    "whitenoise==6.8.2",
    "yarl==1.18.3",
]
# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["uniwash/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*"
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF"
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038" # Checks for uses of isinstance/issubclass that take a tuple 
          # of types for comparison.
          # Deactivated because it can make the code slow: 
          # https://github.com/astral-sh/ruff/issues/7871
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# The fixes in extend-unsafe-fixes will require 
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
